Work on the page 404.html overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,14 +99,6 @@ h1 {
     margin-right: 1rem;
 }
 
-.warning-sign i {
-    color: #D67D00;
-    font-size: 2.3rem;
-    align-self: flex-start;
-    text-align: start;
-    margin-right: 1rem;
-}
-
 .rules-explain {
     display: none;
     background-color: white;
@@ -405,6 +397,20 @@ form {
 }
 
 /* 404 error page*/
+.warning-sign {
+    height: 2.5rem;
+    width: 2.5rem;
+    padding: 0.1rem;
+    margin-right: 1rem;
+}
+
+.warning-sign i {
+    color: #D67D00;
+    font-size: 2.3rem;
+    align-self: flex-start;
+    text-align: center;
+} 
+
 .error-page {
     background-color: white;
     position: absolute;
@@ -614,7 +620,7 @@ footer {
         height: 30px;
     }
 
-    .rules, .warning-sign {
+    .rules {
         font-size: 2.4rem;
     }
 
